// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VSelect.vue should be clearable with prop and dirty 1`] = `

<div tabindex="0"
     role="combobox"
     class="input-group input-group--append-icon input-group--text-field input-group--select"
>
  <div class="input-group__input">
    <div class="input-group__selections"
         style="overflow: hidden;"
    >
      <input disabled="disabled"
             tabindex="-1"
             class="input-group--select__autocomplete"
             style="display: none;"
      >
    </div>
    <div class="menu"
         style="display: inline-block;"
    >
      <div class="menu__content menu__content--select"
           style="max-height: 300px; min-width: 36px; max-width: NaNpx; top: 12px; left: 0px; z-index: 6; display: none;"
      >
        <div class="card"
             style="height: auto;"
        >
          <ul data-uid="29"
              class="list"
          >
            <li>
              <div href="javascript:;"
                   class="list__tile list__tile--link"
              >
                <div class="list__tile__content">
                  <div class="list__tile__title">
                    1
                  </div>
                </div>
              </div>
            </li>
            <li>
              <div href="javascript:;"
                   class="list__tile list__tile--link"
              >
                <div class="list__tile__content">
                  <div class="list__tile__title">
                    2
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <i aria-hidden="true"
       class="material-icons icon input-group__append-icon input-group__icon-cb"
    >
      arrow_drop_down
    </i>
  </div>
  <div class="input-group__details">
    <div class="input-group__messages">
    </div>
  </div>
</div>

`;

exports[`VSelect.vue should be clearable with prop and dirty 2`] = `

<div tabindex="0"
     role="combobox"
     class="input-group input-group--focused input-group--append-icon input-group--text-field input-group--select"
>
  <div class="input-group__input">
    <div class="input-group__selections"
         style="overflow: hidden;"
    >
      <input disabled="disabled"
             tabindex="-1"
             class="input-group--select__autocomplete"
             style="display: none;"
      >
    </div>
    <div class="menu"
         style="display: inline-block;"
    >
      <div class="menu__content menu__content--select"
           style="max-height: 300px; min-width: 36px; max-width: NaNpx; top: 12px; left: 0px; z-index: 6; display: none;"
      >
        <div class="card"
             style="height: auto;"
        >
          <ul data-uid="29"
              class="list"
          >
            <li>
              <div href="javascript:;"
                   class="list__tile list__tile--link"
              >
                <div class="list__tile__content">
                  <div class="list__tile__title">
                    1
                  </div>
                </div>
              </div>
            </li>
            <li>
              <div href="javascript:;"
                   class="list__tile list__tile--link"
              >
                <div class="list__tile__content">
                  <div class="list__tile__title">
                    2
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <i aria-hidden="true"
       class="material-icons icon input-group__append-icon input-group__icon-cb"
    >
      arrow_drop_down
    </i>
  </div>
  <div class="input-group__details">
    <div class="input-group__messages">
    </div>
  </div>
</div>

`;
